[feed] Minor improvements for Feed Binding (#8824)
Signed-off-by: Christoph Weitkamp <github@christophweitkamp.de>